# ChangeLog for dev-java/lucene-analyzers
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  17 Feb 2009; Serkan Kaba <serkan@gentoo.org>
  -lucene-analyzers-2.3.1.ebuild, +lucene-analyzers-2.3.2-r1.ebuild:
  Version bump. Migrate to new lucene-contrib and java-osgi eclasses.

  14 Aug 2008; Jesse Farinacci <jieryn@gmail.com> +metadata.xml:
  creating metadata.xml to shut up repoman

  14 Aug 2008; Jesse Farinacci <jieryn@gmail.com> +ChangeLog:
  adding ChangeLog to shut repoman up