@@ -1,0 +1,10 @@
+Manifest-Version: 1.0
+Bundle-ManifestVersion: 2
+Bundle-Name: %pluginName
+Bundle-Vendor: %vendorName
+Bundle-Localization: plugin
+Export-Package: org.apache.lucene.analysis.br,org.apache.lucene.analysis.cjk,org.apache.lucene.analysis.cn,
+ org.apache.lucene.analysis.cz,org.apache.lucene.analysis.de,org.apache.lucene.analysis.el,org.apache.lucene.analysis.fr,
+ org.apache.lucene.analysis.nl,org.apache.lucene.analysis.ru
+Bundle-SymbolicName: org.apache.lucene.analysis
+Bundle-Version: 1.9.1
