@@ -1,10 +1,0 @@
-# Copyright 1999-2007 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: $
-
-SLOT=1.9
-inherit lucene-contrib
-
-DESCRIPTION="Analyzer addon for lucene"
-KEYWORDS="~amd64 ~ppc ~x86"
-IUSE=""
