@@ -3,6 +3,11 @@
 # $Header: $
 
   17 Feb 2009; Serkan Kaba <serkan@gentoo.org>
+  -lucene-analyzers-1.9.1.ebuild, +lucene-analyzers-1.9.1-r2.ebuild,
+  +files/manifest:
+  Revbump. Add missing files dir.
+
+  17 Feb 2009; Serkan Kaba <serkan@gentoo.org>
   -lucene-analyzers-2.3.1.ebuild, +lucene-analyzers-2.3.2-r1.ebuild:
   Version bump. Migrate to new lucene-contrib and java-osgi eclasses.
 
